# Capybara

./: .gitignore  .gitmodules  CMakeLists.txt  Capybara.sln  GenerateProjects.bat  README.md  build.bat  generate_compile_commands.bat  premake5.lua  run.bat
.cursor/: c_cpp_properties.json
Capybara/: CMakeLists.txt  Capybara.vcxproj  Capybara.vcxproj.filters
Capybara/src/: Capybara.h  precomp.h
Capybara/src/Capybara/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Window.h
Capybara/src/Capybara/Core/: Application.cpp  Application.h  Assert.h  Base.cpp  Base.h  Buffer.h  Input.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  TimeStep.h  Timestep.h  Window.h
Capybara/src/Capybara/Core/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Capybara/src/Capybara/Core/Math/: Mat4.cpp  Mat4.h
Capybara/src/Capybara/Editor/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Capybara/src/Capybara/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Capybara/src/Capybara/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h  ImGuizmo.cpp
Capybara/src/Capybara/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRenderPass.cpp  OpenGLRenderPass.h  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLShader.h  OpenGLShaderUniform.cpp  OpenGLShaderUniform.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Capybara/src/Capybara/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Capybara/src/Capybara/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  FrameBuffer.cpp  FrameBuffer.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  RenderCommandQueue.cpp  RenderCommandQueue.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  SceneRenderer.cpp  SceneRenderer.h  Shader.cpp  Shader.h  ShaderUniform.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Capybara/src/Capybara/Scene/: Entity.cpp  Entity.h  Scene.cpp  Scene.h
Capybara/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  ImGuiOpenGLRenderer.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Capybara/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
CapybaraEditor/: CMakeLists.txt  CapybaraEditor.vcxproj  imgui.ini
CapybaraEditor/assets/env/: imgui.ini
CapybaraEditor/assets/models/m1911/: imgui.ini  m1911-fixed.fbx
CapybaraEditor/assets/shaders/: CapybaraPBR_Anim.glsl  CapybaraPBR_Static.glsl  EnvironmentIrradiance.glsl  EnvironmentMipFilter.glsl  EquirectangularToCubeMap.glsl  Grid.glsl  Renderer2D.glsl  Renderer2D_Line.glsl  SceneComposite.glsl  Skybox.glsl  shader.glsl
CapybaraEditor/src/: CapybaraEditor.cpp  EditorLayer.cpp  EditorLayer.h
Sandbox/: Sandbox.vcxproj  imgui.ini
Sandbox/assets/shaders/: CapybaraPBR_Static.glsl
Sandbox/src/: SandboxApp.cpp  precomp.h
bin-int/Debug-x64/Capybara/: Capybara.dll.recipe  Capybara.ilk  vc143.idb
bin-int/Debug-x64/Capybara/Capybara.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Capybara.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
bin-int/Debug-x64/Sandbox/: Sandbox.exe.recipe  Sandbox.ilk  vc143.idb
bin-int/Debug-x64/Sandbox/Sandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
